--- a/assts/asst01.adoc
+++ b/assts/asst01.adoc
@@ -4,7 +4,7 @@ include::header.adoc[]
 :Author Initials: ASN
 :Date:    2020-08-15
 :Revision: 0.1
-:ASST: A00
+:ASST: A01
 
 = {title}
 
@@ -123,8 +123,20 @@ and keeps track of the number of correct responses.
 [source]
 ----
 $ make mathgame
+gcc -g mathgame.c -o mathgame
 $ ./mathgame
-TBD
+Welcome to Math Game!
+How many rounds do you want to play? 3
+
+2 + 8 = ? 10
+Correct!
+
+1 + 8 = ? 5
+Incorrect :(
+
+6 + 8 = ? 14
+Correct!
+You answered 2/3 correctly.
 ----
 
 Requirements:
@@ -133,10 +145,46 @@ Requirements:
 * Use printf and scanf for interactions with the user
 * Use a loop to ask each question
 * Maintain the number of correct questions
+* Generate random questions. Use rand() to generate random integers between 1 and 9.
 * Print a welcome message 
 * Print a completion message 
 * Compiles with `make`
 * No memory errors using `valgrind`
+
+NOTE: To check for valgrind errors, run your program like so. Look for the 
+message "no leaks are possible". Make sure there are no errors reported. We will talk 
+more about valgrind in week 2 and 3.
+
+[source, subs="quotes"]
+----
+$ valgrind ./mathgame
+==5184== Memcheck, a memory error detector
+==5184== Copyright (C) 2002-2017, and GNU GPL'd, by Julian Seward et al.
+==5184== Using Valgrind-3.15.0 and LibVEX; rerun with -h for copyright info
+==5184== Command: ./mathgame
+==5184== 
+Welcome to Math Game!
+How many rounds do you want to play? 3
+
+2 + 8 = ? 10
+Correct!
+
+1 + 8 = ? 5
+Incorrect :(
+
+6 + 8 = ? 14
+Correct!
+You answered 2/3 correctly.
+==5184== 
+==5184== HEAP SUMMARY:
+==5184==     in use at exit: 0 bytes in 0 blocks
+==5184==   total heap usage: 2 allocs, 2 frees, 2,048 bytes allocated
+==5184== 
+==5184== All heap blocks were freed -- no leaks are possible
+==5184== 
+==5184== For lists of detected and suppressed errors, rerun with: -s
+==5184== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)
+----
 
 [discrete]
 == Submit your work to Github
