--- a/codingstandard.adoc
+++ b/codingstandard.adoc
@@ -3,7 +3,7 @@ include::header.adoc[]
 :stylesheet: front.css
 :leveloffset: -1
 
-:course: CS313
+:course: CS223
 :title: Code Formatting Standards and Guidelines
 :term: Spring 2023
 
@@ -42,16 +42,18 @@ Submitted code should be clean and concise.
 * Declare variables in the smallest scope possible. Prefer local variable to instance variables. Avoid global variables.
 * Never use public instance variables. Use private or protected access and then define a getter method.
 
-=== Class design
+NOTE: In traditional C, it is customary to declare all variables at
+this beginning of a function. You may follow this 
+convention, but I will use the more modern convention of 
+declaring variables close to where they are first used.
+
+=== Memory management design
 
 Typically, there will be many good ways to organize your program. A good 
 design will have the following properties.
 
-* If you allocate data in a constructor, be sure to delete that data in the destructor!
-* Classes should either be independent, or have one-way dependencies with other classes. If work is duplicated between classes or methods, there is something wrong with the design.
-* Classes should coordinate with each other only through their public API.
-* Methods should assume that all instance variables are up-to-date.
-* Methods should be responsible for a single, clearly defined task.
+* Whenever you allocate memory (malloc), write the correspondong code to free that memory right away. Almost always the code to free the memory should be in the same scope as the allocation. For example, if you allocate memory in main, free it in main.
+* If a pointer variable might be re-used, ALWAYS set it to NULL after you free it. If you're not sure, reset freed pointers to NULL.
 
 === Data Structure Design
 
@@ -65,21 +67,13 @@ properties:
 
 == Naming Conventions
 
-* Use meaningful names! For example, if your program needs to a variable to represent a color, call it `color` instead of c. In graphics, the exception to this rule is common variable abreviations, such as 
-** r,g,b,a for the red, green, blue, alpha components of colors
-** x,y,z for positional components
-** t for time 
-** Re-using variables to match a mathematical formula (use a comment to document) 
+* Use meaningful names! For example, if your program needs to a variable to represent a color, call it `color` instead of c. 
 * Use single letter variables for simple loop indices and occasionally generic integers.
 * The use of very obvious, common, meaningful abbreviations is permitted. For example,
 "number" can be abbreviated as "num" as in numStudents.
 * Use _camel case_ for variables, instance variables, and method names. Camel case starts with a lower-case letter and putting the first letter of subsequent words in uppercase. For example, `numStudents`.
-* Use a naming convention to distinguish instance variables from other variables. Commong choices are to 
-** pre-pend or post-pend underscore, e.g. `_radius` or `radius_`
-** pre-pend `m` or `my`, e.g. `mRadius` or `myRadius`
-** Be consistent with your choice!
-* Struct and class names are written in PascalCase, starting with a capital letter. For example, `CircleShape`
 * Constants (static as well as #define) are written in ALL_CAPS.
+* Structs will typically be defined with camelCase. We will use the `struct` keyword whenever referring to a struct type, e.g. `struct node* first;`.
 
 == Whitespace
 
