--- a/assts/asst01.adoc
+++ b/assts/asst01.adoc
@@ -192,7 +192,7 @@ You answered 2/3 correctly.
 Add and check in your program using git and then push your changes to Github. 
 Run the following command inside your `{ASST}` directory.
 
-[source]
+[source, subs="attributes"]
 ----
 $ cd {ASST}
 $ git add *.c
@@ -280,7 +280,7 @@ For full credit, your C programs must be feature-complete, robust (e.g. run with
 have good style.
 
 * Some credit lost for missing features or bugs, depending on severity of error
-* -12.5% for style errors. See the link:codingstandard.html[class coding style] here.
+* -12.5% for style errors. See the link:../codingstandard.html[class coding style] here.
 * -50% for memory errors
 * -100% for failure to checkin work to Github
 * -100% for failure to compile on linux using make
