--- a/index.adoc
+++ b/index.adoc
@@ -13,8 +13,9 @@ include::header.adoc[]
 Instructor: link:https://www.cs.brynmawr.edu/~alinen[Aline Normoyle]
 
 [.anns]
-* Current Agenda: link:#week0[Getting Started]
-* link:assts/asst01.html[Assignment 01]: *Due January 25th*. 
+
+* Current Agenda: link:#week02[Week 03]
+* link:assts/asst02.html[Assignment 02]: *Due Feb 1st*. 
 
 == Course Info
 
@@ -41,9 +42,9 @@ will be introduced at the end of the course.
 
 | Lecture | Park 245 | Monday and Wednesday 1:10 PM - 2:30 PM 
 | Lab | Park 230 | Monday 2:40 PM - 4:00 PM 
-| Office Hours - Prof. Normoyle | 200A | TBD, by appointment
-| Office Hours - Jasmine | Park 231 | TBD 
-| Office Hours - Synarah | Park 231 | TBD
+| Office Hours - Prof. Normoyle | 200A | Wednesdays, 2:30-3:30 PM, by appointment
+| Office Hours - Jasmine | Park 231 | Wednesdays, 7-8 PM 
+| Office Hours - Synarah | Park 231 | Tuesdays, 7- 8 PM
 
 |===
 
