--- a/assts/asst02.adoc
+++ b/assts/asst02.adoc
@@ -1,6 +1,6 @@
 include::header.adoc[]
 
-:title: Assignment 2: If you malloc something, set it free
+:title: Assignment 2: Learn to C
 :Author Initials: ASN
 :Date:    2021-01-29
 :Revision: 0.1
