Update Synarah office hours

--- a/index.adoc
+++ b/index.adoc
@@ -44,7 +44,7 @@ will be introduced at the end of the course.
 | Lab | Park 230 | Monday 2:40 PM - 4:00 PM 
 | Office Hours - Prof. Normoyle | 200A | Wednesdays, 2:30-3:30 PM, by appointment
 | Office Hours - Jasmine | Park 231 | Wednesdays, 7-8 PM 
-| Office Hours - Synarah | Park 231 | Tuesdays, 7- 8 PM
+| Office Hours - Synarah | Park 231 | Tuesdays, 6-7 PM
 
 |===
 
