--- a/schedule.adoc
+++ b/schedule.adoc
@@ -22,36 +22,36 @@
 
 * Topics: Function stacks, scope 
 * link:assts/asst01.html[Assignment 01]: Due Jan 25
-* Read: link:https://diveintosystems.org/singlepage/[Chapter 2] 
+* Read: link:https://diveintosystems.org/singlepage/[Sections 2.1-2.8, 2.9 (Command line arguments only)] 
 * link:https://pythontutor.com/c.html#mode=edit[C Tutor]
 * Lab: SSH and Github setup
 
 //-----------------------------
 |3
 |Jan 30, Feb 1 anchor:week03[]
-|*Pointers* 
+|*Pointers, malloc/free* 
 
-* Topics: Heap, dynamically-allocated memory (malloc, free), pointer-based data structures, More I/O
+* Topics: Heap, dynamically-allocated memory (malloc, free), More arrays
 * link:assts/asst02.html[Assignment 02]: Feb 1
-* Read: link:https://diveintosystems.org/singlepage/[Chapter 2] 
+* Read: link:https://diveintosystems.org/singlepage/[Sections 2.1-2.8, 2.9 (Command line arguments only)] 
 * Lab: Quiz 01 practice, link:studyguide1.html[Study Guide]
 // TODO * link:https://github.com/BrynMawr-CS223-F22/git-workshop[Github workshop] and link:https://github.com/BrynMawr-CS223-S22/git-workshop/blob/main/SSHSetup.md[Setting up SSH keys for Github]
 
 //-----------------------------
 |4
 |Feb 6,8 anchor:week04[]
-|*Debugging. Binary and Data Representation I* 
+|*Pointer-based data structures. Debugging.* 
 
-* Topics: GDB, Valgrind, Binary representations of integers
+* Topics: Linked lists in C. GDB, Valgrind
 * link:assts/.html[Assignment 03]: Due Feb 8
-* Read: link:http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf[Data Structures in C, Mark Allen Weiss, Chpt 3 and 4]
-* Read: link:https://diveintosystems.org/singlepage/[Chapter 3] 
+* Read: link:https://diveintosystems.org/singlepage/[Sections 3.1-3.3] 
+* Read: link:http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf[Data Structures in C, Mark Allen Weiss, Chpt 3]
 * Lab: **Code Jam 01**, link:studyguide1.html[Study Guide]
 
 //-----------------------------
 |5
 |Feb 13,15 anchor:week05[]
-|*Binary and Data Representation II* 
+|*Binary and Data Representation I* 
 
 * Read: link:https://diveintosystems.org/singlepage/[Chapter 4.1-4.3] 
 * link:assts/.html[Assignment 04]: Due Feb 15
@@ -60,7 +60,7 @@
 //-----------------------------
 |6
 |Feb 20,22 anchor:week06[]
-|*Computer architecture, Assembly* 
+|*Binary and Data Representation II* 
 
 * Read: link:https://diveintosystems.org/singlepage/[Chapter 4.4-4.9] 
 * Read: link:https://diveintosystems.org/singlepage/[Section 5.1, Chapter 6] 
@@ -70,7 +70,7 @@
 //-----------------------------
 |7
 |Feb 27, March 1 anchor:week07[]
-|*Assembly I* 
+|*Computer architecture, Assembly* 
 
 * Read: link:https://diveintosystems.org/singlepage/[Chapter 7 (7.1-7.3,7.5,7.10), 10] 
 * link:assts/.html[Assignment 06]: Due March 1 
