tweak office hour wording

--- a/index.adoc
+++ b/index.adoc
@@ -42,7 +42,7 @@ will be introduced at the end of the course.
 
 | Lecture | Park 245 | Monday and Wednesday 1:10 PM - 2:30 PM 
 | Lab | Park 230 | Monday 2:40 PM - 4:00 PM 
-| Office Hours - Prof. Normoyle | 200A | Wednesdays, 2:30-3:30 PM, by appointment
+| Office Hours - Prof. Normoyle | 200A | Wednesdays, 2:30-3:30 PM, or by appointment
 | Office Hours - Jasmine | Park 231 | Wednesdays, 7-8 PM 
 | Office Hours - Synarah | Park 231 | Tuesdays, 6-7 PM
 
