--- a/index.adoc
+++ b/index.adoc
@@ -14,8 +14,8 @@ Instructor: link:https://www.cs.brynmawr.edu/~alinen[Aline Normoyle]
 
 [.anns]
 
-* Current Agenda: link:#week02[Week 03]
-* link:assts/asst02.html[Assignment 02]: *Due Feb 1st*. 
+* Current Agenda: link:#week04[Week 04]
+* link:assts/asst03.html[Assignment 03]: *Due Feb 8th*. 
 
 == Course Info
 
