--- a/schedule.adoc
+++ b/schedule.adoc
@@ -43,7 +43,7 @@
 |*Pointer-based data structures. Debugging.* 
 
 * Topics: Linked lists in C. GDB, Valgrind
-* link:assts/.html[Assignment 03]: Due Feb 8
+* link:assts/asst03.html[Assignment 03]: Due Feb 8
 * Read: link:https://diveintosystems.org/singlepage/[Sections 3.1-3.3] 
 * Read: link:http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf[Data Structures in C, Mark Allen Weiss, Chpt 3]
 * Lab: **Code Jam 01**, link:studyguide1.html[Study Guide]
